<resources>

    <string name="app_name">Not Panic</string>
    <string name="app_info">Click and hold the power button whenever needed.This app will send location details to your desired contacts</string>
    <string name="app_contacts">Added Contacts</string>
    <string name="app_contacts_added">Contact List</string>
    <string name="app_settings_save">Save Settings</string>
    <string name="app_settings_activate">Send Location Updates</string>
    <string name="app_settings_deactivate">Cancel</string>
    <string name="app_panic_info">Application is sending location information to your contacts..</string>
    <string name="app_message_hint">Set the alert message ,Eg. I am in danger!</string>
    <string name="app_alert_message">Alert Message</string>
    <string name="app_close">Close</string>
    <string name="app_instruction">Instructions</string>
    <string name="service_label">NotPanic Service</string>
   <string name="instruction_intro">Do the following in order to use app in emergency</string>
   <string name="instruction_1">1.Hold the volume down button until mobile goes in vibrate mode.</string>
   <string name="instruction_2">2.Then immediately (within 1 second) volume up till mobile is in Ringer mode again.</string>
   <string name="instruction_3">3.Location details along with the message you saved earlier will be sent to all your saved contacts</string>

</resources>