<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrlView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp" >

        <TextView
            android:id="@+id/app_alert_message"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:alpha="0.75"
            android:gravity="center"
            android:paddingTop="10dp"
            android:text="@string/app_alert_message"
            android:textColor="#800080"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/app_user_message"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:alpha="0.5"
            android:gravity="top"
            android:hint="@string/app_message_hint"
            android:inputType="textMultiLine|textCapSentences"
            android:lines="5"
            android:textColor="#ff0000" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:weightSum="100" >

            <TextView
                android:id="@+id/app_contacts"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:alpha="0.75"
                android:text="@string/app_contacts"
                android:textColor="#800080"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/app_contacts_added"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:alpha="0.75"
                android:gravity="center"
                android:text="@string/app_contacts_added"
                android:textColor="#800080"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:weightSum="100" >

            <Spinner
                android:id="@+id/app_contact_list"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/app_contact_list_added"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:textSize="20sp" />
        </LinearLayout>

        <Button
            android:id="@+id/app_settings_save"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:alpha="0.75"
            android:background="#800080"
            android:text="@string/app_settings_save"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/app_settings_activate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:alpha="0.75"
            android:background="#800080"
            android:text="@string/app_settings_activate"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/app_instruction"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:alpha="0.75"
            android:background="#800080"
            android:text="@string/app_instruction"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/app_settings_close"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:alpha="0.75"
            android:background="#800080"
            android:text="@string/app_close"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </LinearLayout>

</ScrollView>